# android-sensor-probe

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/debug/java/io/github/sensorprobe/: DebugCommandReceiver.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libusb_jni.cpp  ov580_jni.cpp  usb_session.h  uvc_jni.cpp  xreal_helen.cpp  xreal_helen.h
app/src/main/java/io/github/sensorprobe/: DiagnosticRecorder.kt  ExternalCameraPreview.kt  LibusbNative.kt  MainActivity.kt  Models.kt  Ov580Native.kt  ProtocolDecoders.kt  UsbGlassesReader.kt  UvcNative.kt  XrealOneTcpReader.kt
app/src/main/res/values/: styles.xml
app/src/main/res/xml/: device_filter.xml
docs/: ar-drivers-rs-support.md  community-testing.md  viture-sdk-support.md  xreal-usb-protocol.md
scripts/: analyze-report.py  install-debug.sh  vivo_x300_install_apk.sh
